# agentic-engineering

./: LICENSE  README.md
.claude-plugin/: marketplace.json
.github/workflows/: validate.yml
docs/plan/: 2026-07-10-conceptual-outline.md
docs/reference/: README.md  plugin-marketplace-spec.md
docs/reference/architecture/: actor-authorization.md  architecture-tests.md  clean-architecture-services.md  contract-tests.md  dependency-injection.md  errors-as-values.md  event-driven-communication.md  event-sourcing-core.md  interval-scheduling.md  outbox-runtime.md  saga-engine.md
docs/reference/contracts/: contract-principles.md  openapi-sdk-generation.md  schema-to-python-types.md
docs/reference/deployment/: compose-and-ci.md  docker-pnpm.md  docker-uv.md
docs/reference/layout/: pnpm-workspace.md  uv-workspace.md  workspace-principles.md
docs/reference/python/: linting-formatting.md  service-configuration.md  service-layout.md  test-doubles.md  testing.md  type-checking.md
docs/reference/quality/: crap-metric.md  crap-python.md  crap-typescript.md  mutation-testing-typescript.md  mutation-testing.md  qa-chain-python.md  qa-chain-typescript.md
docs/reference/typescript/: formatting-prettier.md  linting-eslint.md  testing-vitest.md  type-checked-tests.md
plugins/dev/.claude-plugin/: plugin.json
plugins/dev/agents/: plan-critic.md  (+3 more)
plugins/python-dev/templates/fastapi/tree/: config.py  main.py  pyproject.toml
plugins/python-dev/templates/fastapi/tree/api/health/: router.py  service.py
plugins/python-dev/templates/fastapi/tree/tests/api/: test_health.py
(+20 files in other folders)
